# advanced-python-course

./: .gitignore  TODO.md  pyproject.toml  readme.md
.github/workflows/: python-app.yml
docs/: 1 strings.md  1.1 strings-challenge.md  10 overloading.md  10.1 overloading-challenge.md  11 module-system.md  11.1 module-system-challenge.md  12.1 building-and-packages-challenge.md  13 closures-late-bindings.md  13.1 closures-late-bindings-challenge.md  14 decorators.md  15 generators.md  15.1 generators-challenge.md  16 context-managers-dynamic-contexts.md  16.1 context-managers-dynamic-contexts-challenge.md  17 async-context-managers.md  17.1 async-context-managers-challenge.md  18 threading.md  18.1 threading-challenge.md  2 numbers.md  2.1 numbers-challenge.md  20 concurrency-models.md  20.1 concurrency-models-challenge.md  21 data-pipelines.md  21.1 data-pipelines-challenge.md  22 working-with-json.md  23 working-with-xml.md  23.1 working-with-xml-challenge.md  24 functools.md  24 working-with-yaml.md  24.1 working-with-yaml-challenge.md  25 reflection-metaprogramming-intrespection.md  25.1 reflection-metaprogramming-intrespection-challenge.md  27.1 descriptors-challenge.md  28 memory-model.md  29 type-system.md  29.1 type-system-challenge.md  3 bool.md  3.1 bool-challenge.md  31 nonetype-ellipsistype-and-notimplementedtype.md  32 testing.md  (+13 more)
scripts/: build-code-exercises.py  build_code_challenges.py  build_html.py  correct_sample_code.py  generate_solutions.py
src/Building and Packages/: Building and Packages Challenge.md  Building and Packages.md
src/CICD and Deployment/: CICD Pipelines Challenge.md  CICD Pipelines.md
src/Context Managers/: Async Context Managers.md  Context Managers Challenge.md  Context Managers.md
src/Data Formats/: Working With JSON.md
src/Data types and Variables/: NoneType, EllipsisType and NotImplementedType Challenge.md  Strings Challenge.md  Variables Constants and References.md
src/Databases and ORMs/: Databases and ORMs Challenge.md
src/Frameworks and Libraries/: Data Pipelines.md  (+1 more)
(+87 files in other folders)
